--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 </head>
 <body>
   <div class="image-container">
-    <img src="LogoPt5.svg" alt="Image 1">
-    <img src="LogoPt1.svg" alt="Image 2">
-    <img src="LogoPt4.svg" alt="Image 3">
-    <img src="LogoPt7.svg" alt="Image 4">
-    <img src="LogoPt2.svg" alt="Image 5">
-    <img src="LogoPt3.svg" alt="Image 6">
-    <img src="LogoPt6.svg" alt="Image 7">
+    <img src="Logopt5.png" alt="Image 1">
+    <img src="LogoPt1.png" alt="Image 2">
+    <img src="Logopt4.png" alt="Image 3">
+    <img src="Logopt7.png" alt="Image 4">
+    <img src="Logopt2.png" alt="Image 5">
+    <img src="Logopt3.png" alt="Image 6">
+    <img src="Logopt6.png" alt="Image 7">
   </div>
 
   <script>
